removes aboutcontroller and sets up final layout

--- a/src/main/resources/templates/fragments/general/navbar.html
+++ b/src/main/resources/templates/fragments/general/navbar.html
@@ -19,7 +19,13 @@
                     <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" th:href="@{/about}">About</a>
+                    <a class="nav-link" href="#letters">Recommendation</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
