--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -22,13 +22,14 @@
             <div th:replace="~{fragments/home-page/carousel :: carousel}"></div>
         </div>
     </div>
+
     <div class="row scheme-color-2" id="experience">
         <div class="col-12">
             <div th:replace="~{fragments/home-page/timeline :: timeline}"></div>
         </div>
     </div>
 
-    <div class="row scheme-color-4" id="skills">
+    <div class="row scheme-color-5" id="skills">
         <div class="col-1"></div>
         <div class="col-5">
             <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
@@ -38,6 +39,17 @@
         </div>
         <div class="col-1"></div>
     </div>
+
+    <div class="row scheme-color-1" id="letters">
+        hekko
+    </div>
+    <div class="row scheme-color-2" id="about">
+        hekko2
+    </div>
+    <div class="row scheme-color-5" id="contact">
+        hekko3
+    </div>
+
 </section>
 </body>
 
