--- a/src/main/resources/templates/fragments/general/footer.html
+++ b/src/main/resources/templates/fragments/general/footer.html
@@ -5,26 +5,37 @@
 </head>
 
 <body>
-    <footer class="bg-body-tertiary text-center" th:fragment="footer">
-        <div class="container p-4 pb-0">
-            <section class="mb-4">
-                <a data-mdb-ripple-init
-                    class="btn text-white btn-floating m-1"
-                    style="background-color: #0082ca;"
-                    role="button"
-                    th:href="@{https://www.linkedin.com/in/phi-tiet-804886220/}"
-                ><i class="bi bi-linkedin"></i>
-                </a>
-                <a data-mdb-ripple-init
-                    class="btn text-white btn-floating m-1"
-                    style="background-color: #333333;"
-                    role="button"
-                    th:href="@{https://github.com/PhiTiet?tab=repositories}"
-                ><i class="bi bi-github"></i
-                ></a>
-            </section>
+<footer class="text-center" th:fragment="footer">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-2">
+            <a data-mdb-ripple-init
+               class="btn text-white btn-floating m-1"
+               style="background-color: #0082ca;"
+               role="button"
+               th:href="@{https://www.linkedin.com/in/phi-tiet-804886220/}"
+            ><i class="bi bi-linkedin"></i></a>
+            <a data-mdb-ripple-init
+               class="btn text-white btn-floating m-1"
+               style="background-color: #333333;"
+               role="button"
+               th:href="@{https://github.com/PhiTiet?tab=repositories}"
+            ><i class="bi bi-github"></i></a>
         </div>
-    </footer>
+        <div class="col-2">
+            <i class="fa-solid fa-envelope"></i>
+            <span>anhphi099@gmail.com</span>
+        </div>
+        <div class="col-2">
+            <i class="fa-solid fa-phone"></i>
+            <span>+31614054367</span>
+        </div>
+        <div class="col-2">
+
+        </div>
+    </div>
+
+</footer>
 </body>
 
 </html>
