--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,5 +1,6 @@
 /*Navbar spacing*/
 @media (min-width: 981px) { body { padding-top: 56px; } }
+a { color: inherit; }
 
 .progress-bar {
     transform: rotate(180deg);
