--- a/src/main/resources/templates/fragments/general/footer.html
+++ b/src/main/resources/templates/fragments/general/footer.html
@@ -23,12 +23,16 @@
             ><i class="bi bi-github"></i></a>
         </div>
         <div class="col-2">
-            <i class="fa-solid fa-envelope"></i>
-            <span>anhphi099@gmail.com</span>
+            <a href="mailto:anhphi099@gmail.com" style="text-decoration:none">
+                <i class="fa-solid fa-envelope"></i>
+                <span>anhphi099@gmail.com</span>
+            </a>
         </div>
         <div class="col-2">
-            <i class="fa-solid fa-phone"></i>
-            <span>+31614054367</span>
+            <a href="tel:+31614054367" style="text-decoration:none">
+                <i class="fa-solid fa-phone"></i>
+                <span>+31614054367</span>
+            </a>
         </div>
         <div class="col-2">
 
