--- a/src/main/resources/templates/fragments/general/footer.html
+++ b/src/main/resources/templates/fragments/general/footer.html
@@ -23,20 +23,21 @@
             ><i class="bi bi-github"></i></a>
         </div>
         <div class="col-2">
-            <a href="mailto:anhphi099@gmail.com" style="text-decoration:none">
-                <i class="fa-solid fa-envelope"></i>
-                <span>anhphi099@gmail.com</span>
-            </a>
-        </div>
-        <div class="col-2">
-            <a href="tel:+31614054367" style="text-decoration:none">
-                <i class="fa-solid fa-phone"></i>
-                <span>+31614054367</span>
-            </a>
-        </div>
-        <div class="col-2">
+            <div class="row g-0">
+                <a href="mailto:anhphi099@gmail.com" style="text-decoration:none">
+                    <i class="fa-solid fa-envelope"></i>
+                    <span>anhphi099@gmail.com</span>
+                </a>
+            </div>
+            <div class="row g-0">
+                <a href="tel:+31614054367" style="text-decoration:none">
+                    <i class="fa-solid fa-phone"></i>
+                    <span>+31614054367</span>
+                </a>
+            </div>
 
         </div>
+        <div class="col-4"></div>
     </div>
 
 </footer>
