--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="row scheme-color-2" id="experience">
-        <div class="col-12">
+        <div class="col">
             <div th:replace="~{fragments/home-page/timeline :: timeline}"></div>
         </div>
     </div>
