fixes horizontal scroll & setup

--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -41,10 +41,10 @@
     </div>
 
     <div class="row scheme-color-1" id="letters">
-        hekko
+        <div>RECOMM</div>
     </div>
     <div class="row scheme-color-2" id="about">
-        hekko2
+        <div>ABOUT_WEBSITE</div>
     </div>
 
 </section>
