text spacing/sizing

--- a/src/main/resources/templates/fragments/home-page/jumbotron.html
+++ b/src/main/resources/templates/fragments/home-page/jumbotron.html
@@ -5,7 +5,7 @@
 <body>
 <div class="jumbotron jumbotron-fluid" th:fragment="jumbotron">
     <div class="container">
-        <h1 class="display-4">Hey, I'm Phi</h1>
+        <h1 class="display-4 text-center">Hey, I'm Phi</h1>
         <p class="lead" th:text="'Thanks for dropping by, I\'m Phi, your friendly neighborhood software engineer! ' +
             'At the ripe age of ' + ${details.age()} + ', I embarked on my coding adventure. ' +
             'It\'s been ' + ${details.programmerPeriod().getYears()} + ' years since I first danced with curly braces, ' +
