--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -41,10 +41,10 @@
     </div>
 
     <div class="row scheme-color-1" id="letters">
-        <div>RECOMM</div>
+        <div>RECOMMENDATION LETTERS</div>
     </div>
     <div class="row scheme-color-2" id="about">
-        <div>ABOUT_WEBSITE</div>
+        <div th:replace="~{fragments/home-page/about :: about}"></div>
     </div>
 
 </section>
