Rounds up about section

--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="row scheme-color-1" id="letters">
-        <div>RECOMMENDATION LETTERS</div>
+        <div th:replace="~{fragments/home-page/recommendation :: recommendation}"></div>
     </div>
     <div class="row scheme-color-2" id="about">
         <div th:replace="~{fragments/home-page/about :: about}"></div>
