--- a/src/main/resources/templates/fragments/home-page/recommendation.html
+++ b/src/main/resources/templates/fragments/home-page/recommendation.html
@@ -4,9 +4,12 @@
 <head>
 </head>
 
-<body>
-<div th:fragment="recommendation"></div>
+<body th:fragment="recommendation">
+<div class="col-1"></div>
+<div class="col-10">
     
+</div>
+<div class="col-1"></div>
 </body>
 
 </html>
