Finishes Recommendation accordion

--- a/src/main/resources/templates/fragments/home-page/about.html
+++ b/src/main/resources/templates/fragments/home-page/about.html
@@ -17,7 +17,7 @@
                  so that could change. I might for instance host it on my raspberry-pi due to cost concerns :)'"></p>
     </div>
 </div>
-<div class="col-6 scheme-color-1 my-3  rounded">
+<div class="col-6 scheme-color-1 my-3  rounded py-3">
     <img th:src="@{static/images/cloud_architecture.png}" class="d-block w-100" alt="picture of cloud architecture">
 </div>
 <div class="col-3">
