--- a/src/main/resources/templates/fragments/home-page/about.html
+++ b/src/main/resources/templates/fragments/home-page/about.html
@@ -8,7 +8,7 @@
 <div class="col-3">
     <div class="jumbotron jumbotron-fluid m-3">
         <h5> About this website</h5>
-        <p class="" th:text="'This site is served by a containerized Java Spring boot
+        <p th:text="'This site is served by a containerized Java Spring boot
                  application. Currently, the application runs on Java ' + ${details.currentJavaVersion} + ' and Spring
                  boot version ' + ${details.currentSpringBootVersion} +  ' With Thymeleaf templates and Bootstrap 5 as
                  frontend. I intend to keep these versions up to date.
@@ -17,7 +17,7 @@
                  so that could change. I might for instance host it on my raspberry-pi due to cost concerns :)'"></p>
     </div>
 </div>
-<div class="col-6 scheme-color-1 my-3  rounded py-3">
+<div class="col-6 scheme-color-3 my-3 rounded py-3">
     <img th:src="@{static/images/cloud_architecture.png}" class="d-block w-100" alt="picture of cloud architecture">
 </div>
 <div class="col-3">
