--- a/src/main/resources/templates/fragments/home-page/recommendation.html
+++ b/src/main/resources/templates/fragments/home-page/recommendation.html
@@ -21,7 +21,7 @@
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
              data-bs-parent="#recommendationAccordion">
             <div class="accordion-body">
-                <embed th:src="@{static/pdf/recommendation_letter_armend_hoxha.pdf}" class="min-vh-100 w-100">
+                <embed th:src="@{static/pdf/recommendation_letter_armend_hoxha.pdf#toolbar=0}" class="min-vh-100 w-100">
             </div>
         </div>
     </div>
@@ -36,7 +36,8 @@
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
              data-bs-parent="#recommendationAccordion">
             <div class="accordion-body d-flex justify-content-center">
-                <embed th:src="@{static/pdf/recommendation_letter_rob_smorgenburg.pdf}" class="min-vh-100 w-100">
+                <embed th:src="@{static/pdf/recommendation_letter_rob_smorgenburg.pdf#toolbar=0}"
+                       class="min-vh-100 w-100">
             </div>
         </div>
     </div>
