--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -9,7 +9,7 @@
 
 <body>
 <section layout:fragment="content" data-bs-spy="scroll" data-bs-target="#my-navbar" data-bs-smooth-scroll="true">
-    <div class="row scheme-color-1" id="about-me">
+    <div class="row scheme-color-1 pb-3" id="about-me">
         <div class="col-6">
             <div class="row-6">
                 <div th:replace="~{fragments/home-page/jumbotron :: jumbotron}"></div>
@@ -23,13 +23,13 @@
         </div>
     </div>
 
-    <div class="row scheme-color-2" id="experience">
+    <div class="row scheme-color-2 pb-3" id="experience">
         <div class="col">
             <div th:replace="~{fragments/home-page/timeline :: timeline}"></div>
         </div>
     </div>
 
-    <div class="row scheme-color-5" id="skills">
+    <div class="row scheme-color-5 pb-3" id="skills">
         <div class="col-1"></div>
         <div class="col-5">
             <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
@@ -40,7 +40,7 @@
         <div class="col-1"></div>
     </div>
 
-    <div class="row scheme-color-1 py-3" id="letters">
+    <div class="row scheme-color-1 pb-3" id="letters">
         <div class="col-1"></div>
         <div class="col-10">
             <div th:replace="~{fragments/home-page/recommendation :: recommendation}"></div>
