--- a/src/main/resources/templates/fragments/home-page/jumbotron.html
+++ b/src/main/resources/templates/fragments/home-page/jumbotron.html
@@ -8,15 +8,15 @@
         <h1 class="display-4 text-center">Hey, I'm Phi</h1>
         <hr class="my-4">
         <p class="lead" th:text="'Thanks for dropping by, I\'m Phi, your ' + ${details.age()} + ' year old neighborhood software engineer!
-            It\'s been ' + ${details.programmerPeriod().getYears()} + ' years since I first danced with curly braces, ' +
-            'and ever since, I\'ve eaten my fair share of segmentation faults and runtime exceptions. ' +
-            'I\'ve been programming professionally for over ' + ${details.professionalProgrammerPeriod().getYears()} +
+            It\'s been ' + ${details.programmerPeriod().getYears()} + ' years since I first danced with curly braces,
+            and ever since, I\'ve enjoyed  my fair share of segmentation faults and runtime exceptions.
+            I\'ve been programming professionally for over ' + ${details.professionalProgrammerPeriod().getYears()} +
             ' years and ' + ${details.professionalProgrammerPeriod().getMonths()} + ' months now. ' +
-            'My ambitions are sharper than my favorite chess lines – I\'m always up for a challenge. ' +
-            'After work, you can catch me wearing multiple hats; not just the coding kind. ' +
-            'I\'m a foodie exploring the culinary wonders of the world, a (board)game enthusiast always down for one more game, ' +
-            'a chess amateur gambit\'ing away, and a globe-trotter seeking Wi-Fi signals wherever I go. ' +
-            'This website is an up-to-date showcases of my career thus far, have a look around :)'">
+            'My ambitions are sharper than my favorite chess lines – I\'m always up for a challenge.
+            After work, you can catch me wearing multiple hats; not just the coding kind.
+            I\'m a foodie exploring the culinary wonders of the world, a (board)game enthusiast always down for one more game,
+            a chess amateur gambit\'ing away, and a globe-trotter seeking Wi-Fi signals wherever I go.
+            This website is an up-to-date showcases of my career thus far, have a look around :)'">
         </p>
     </div>
 </div>
