setup for aboutme refacctor & semantic html

--- a/src/main/resources/templates/fragments/general/navbar.html
+++ b/src/main/resources/templates/fragments/general/navbar.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link" href="#letters">Recommendation</a>
+                    <a class="nav-link" href="#recommendation">Recommendation</a>
                 </li>
                 <li class="nav-item px-2">
                     <a class="nav-link" href="#about">About</a>
