--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -4,7 +4,7 @@
 <head>
 </head>
 
-<body th:fragment="about">
+<body th:fragment="aboutwebsite">
 <div class="col-3">
     <div class="jumbotron jumbotron-fluid m-3">
         <h5> About this website</h5>
@@ -28,7 +28,7 @@
             <li class="list-group-item scheme-color-3">Open-source repository safely</li>
             <li class="list-group-item scheme-color-3">OAuth 2 for login & commenting</li>
             <li class="list-group-item scheme-color-3">Extend color scheme</li>
-            <li class="list-group-item scheme-color-3">Use a different frontend-framework</li>
+            <li class="list-group-item scheme-color-3">More semantic HTML</li>
             <li class="list-group-item scheme-color-3">Improved responsiveness</li>
             <li class="list-group-item scheme-color-3">Further accessibility improvements</li>
             <li class="list-group-item scheme-color-3">Improve cloud cost efficiency</li>
