--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -8,51 +8,59 @@
 </head>
 
 <body>
-<section layout:fragment="content" data-bs-spy="scroll" data-bs-target="#my-navbar" data-bs-smooth-scroll="true">
-    <div class="row scheme-color-1 pb-3" id="about-me">
+<nav layout:fragment="content" data-bs-spy="scroll" data-bs-target="#my-navbar" data-bs-smooth-scroll="true">
+
+    <section class="row scheme-color-1 pb-3" id="about-me">
         <div class="col-6">
-            <div class="row-6">
-                <div th:replace="~{fragments/home-page/jumbotron :: jumbotron}"></div>
-            </div>
-            <div class="row-6">
+            <article class="row-6">
+                <article th:replace="~{fragments/home-page/aboutme :: aboutme}"></article>
+            </article>
+            <article class="row-6">
                 <div th:replace="~{fragments/home-page/hobbies :: hobbies}"></div>
-            </div>
+            </article>
         </div>
         <div class="col-6">
-            <div th:replace="~{fragments/home-page/carousel :: carousel}"></div>
+            <article class="row-6">
+                <article th:replace="~{fragments/home-page/carousel :: carousel}"></article>
+            </article>
+            <article class="row-6">
+                <div th:replace="~{fragments/home-page/hobbytext :: hobbytext}"></div>
+            </article>
         </div>
-    </div>
 
-    <div class="row scheme-color-2 pb-3" id="experience">
+    </section>
+
+    <section class="row scheme-color-2 pb-3" id="experience">
         <div class="col">
-            <div th:replace="~{fragments/home-page/timeline :: timeline}"></div>
+            <article th:replace="~{fragments/home-page/timeline :: timeline}"></article>
         </div>
-    </div>
+    </section>
 
-    <div class="row scheme-color-5 pb-3" id="skills">
+    <section class="row scheme-color-5 pb-3" id="skills">
         <div class="col-1"></div>
         <div class="col-5">
-            <div th:replace="~{fragments/home-page/certificates :: certificates}"></div>
+            <article th:replace="~{fragments/home-page/certificates :: certificates}"></article>
         </div>
         <div class="col-5">
-            <div th:replace="~{fragments/home-page/skills :: skills}"></div>
+            <article th:replace="~{fragments/home-page/skills :: skills}"></article>
         </div>
         <div class="col-1"></div>
-    </div>
+    </section>
 
-    <div class="row scheme-color-1 pb-3" id="letters">
+    <section class="row scheme-color-1 pb-3" id="recommendation">
         <div class="col-1"></div>
         <div class="col-10">
-            <div th:replace="~{fragments/home-page/recommendation :: recommendation}"></div>
+            <article th:replace="~{fragments/home-page/recommendation :: recommendation}"></article>
         </div>
         <div class="col-1"></div>
 
-    </div>
-    <div class="row scheme-color-2" id="about">
-        <div th:replace="~{fragments/home-page/about :: about}"></div>
-    </div>
+    </section>
 
-</section>
+    <section class="row scheme-color-2" id="about">
+        <article th:replace="~{fragments/home-page/aboutwebsite :: aboutwebsite}"></article>
+    </section>
+
+</nav>
 </body>
 
 </html>
