--- a/src/main/resources/templates/fragments/home-page/aboutme.html
+++ b/src/main/resources/templates/fragments/home-page/aboutme.html
@@ -16,7 +16,7 @@
             After work, you can catch me wearing multiple hats; not just the coding kind.
             I\'m a foodie exploring the culinary wonders of the world, a (board)game enthusiast always down for one more game,
             a chess amateur gambit\'ing away, and a globe-trotter seeking Wi-Fi signals wherever I go.
-            This website is an up-to-date showcases of my career thus far, have a look around :)'">
+            This website is an up-to-date showcases of my career thus far, have a look around.'">
         </p>
     </div>
 </div>
