rewrote the intro section

--- a/src/main/resources/templates/fragments/home-page/hobbytext.html
+++ b/src/main/resources/templates/fragments/home-page/hobbytext.html
@@ -8,7 +8,14 @@
 <div class="jumbotron jumbotron-fluid" th:fragment="hobbytext">
     <div class="container">
         <p class="lead"
-           th:text="'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'">
+           th:text="
+           'After work, you can catch me wearing multiple hats; not just the coding kind.
+            I\'m a foodie exploring the culinary wonders of the world,
+            a (board) game enthusiast always down for one more game,
+            a home-cook hungrily scrolling through youtube recipe videos,
+            an anime enjoyer still wishing I could fire off a kamehameha,
+            a chess amateur gambit\'ing away online and over-the-board,
+            and a globe-trotter seeking Wi-Fi signals wherever I go.'">
         </p>
     </div>
 </div>
