--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -17,8 +17,9 @@ a { color: inherit; }
     margin-top: -50px;
 }
 .carousel-item {
+
   height: 35rem;
-  min-height: 350px;
+  min-height: 80%;
   background-size: cover;
 }
 
