Striped through some of the upgrades

--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -27,14 +27,14 @@
     <div class="jumbotron jumbotron-fluid m-3">
         <h5> Future Improvements</h5>
         <ul class="list-group list-group-flush ">
-            <li class="list-group-item scheme-color-3">Support Https & DDoS prevention</li>
+            <li class="list-group-item scheme-color-3"><s>Support Https & DDoS prevention</s></li>
             <li class="list-group-item scheme-color-3">Open-source repository safely</li>
             <li class="list-group-item scheme-color-3">OAuth 2 for login & commenting</li>
             <li class="list-group-item scheme-color-3">Extend color scheme</li>
             <li class="list-group-item scheme-color-3">More semantic HTML</li>
             <li class="list-group-item scheme-color-3">Improved responsiveness</li>
             <li class="list-group-item scheme-color-3">Further accessibility improvements</li>
-            <li class="list-group-item scheme-color-3">Improve cloud cost efficiency</li>
+            <li class="list-group-item scheme-color-3"><s>Improve cloud cost efficiency</s></li>
         </ul>
     </div>
 </div>
