--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -15,9 +15,10 @@
                  As of writing, I\'m hosting the website on Azure\'s Kubernetes Service via a Github Actions workflow which
                  builds and deploys automatically on push. However, the application itself is cloud-provider agnostic
                  so that could change. I might for instance host it on my raspberry-pi due to cost concerns :).
-                 I\'ve made the versions and time-periods dynamic, they\'re calculated serverside. As for the Spring Boot
-                 architecture, I\'ve adhered to a layered architecture with easily updatable items (experience, hobbies,
-                 certificates, and skills) from configuration.'"></p>
+                 DDoS protection & Https is provided through cloudflare, which acts as a proxy between the DNS and the
+                 Ingress controller.Finally, I\'ve made the versions and time-periods dynamic, they\'re calculated
+                 serverside. As for the  Spring Boot architecture, I\'ve adhered to a layered architecture with easily
+                 updatable items (experience, hobbies, certificates, and skills) from configuration.'"></p>
     </div>
 </div>
 <div class="col-6 scheme-color-3 my-3 rounded py-3">
