Checks off pulicizing the repository as it has been done so.

--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -29,7 +29,7 @@
         <h5> Future Improvements</h5>
         <ul class="list-group list-group-flush ">
             <li class="list-group-item scheme-color-3"><s>Support Https & DDoS prevention</s></li>
-            <li class="list-group-item scheme-color-3">Open-source repository safely</li>
+            <li class="list-group-item scheme-color-3"><s>Publicize repository safely</s></li>
             <li class="list-group-item scheme-color-3">OAuth 2 for login & commenting</li>
             <li class="list-group-item scheme-color-3">Extend color scheme</li>
             <li class="list-group-item scheme-color-3">More semantic HTML</li>
