adds links to repositories including this one. Hi there :)

--- a/src/main/resources/templates/fragments/home-page/aboutme.html
+++ b/src/main/resources/templates/fragments/home-page/aboutme.html
@@ -14,6 +14,19 @@
         in love with the craft ever since, taking pride in my work as I hone my craftsmanship. Truly, the thought that
          there is always more to learn and improve keeps me striving.'"></p>
 
+        <p class="lead">
+            For a glimpse in my latest ability in software engineering check out the repository used to build and host
+            this website
+            <button type="button" class="btn btn-sm btn-outline-secondary">
+                <a href="https://github.com/PhiTiet/portfolio" target="_blank">here.</a>
+            </button>
+            If you're instead interested in my programming and problem-solving ability I'd urge you to check out my
+            latest Advent Of Code repository
+            <button type="button" class="btn btn-sm btn-outline-secondary">
+                <a href="https://github.com/PhiTiet/AdventOfCode2023" target="_blank">here.</a>
+            </button>
+        </p>
+
         <p class="lead" th:text="
         'Professionally, I\'ve been at it for over ' + ${details.professionalProgrammerPeriod().getYears()} + ' years and
         ' + ${details.professionalProgrammerPeriod().getMonths()} + ' months. If you\'re curious about the twists and
