periods outside of button

--- a/src/main/resources/templates/fragments/home-page/aboutme.html
+++ b/src/main/resources/templates/fragments/home-page/aboutme.html
@@ -18,13 +18,14 @@
             For a glimpse in my latest ability in software engineering check out the repository used to build and host
             this website
             <button type="button" class="btn btn-sm btn-outline-secondary">
-                <a href="https://github.com/PhiTiet/portfolio" target="_blank">here.</a>
+                <a href="https://github.com/PhiTiet/portfolio" target="_blank">here</a>
             </button>
-            If you're instead interested in my programming and problem-solving ability I'd urge you to check out my
+            . If you're instead interested in my programming and problem-solving ability I'd urge you to check out my
             latest Advent Of Code repository
             <button type="button" class="btn btn-sm btn-outline-secondary">
-                <a href="https://github.com/PhiTiet/AdventOfCode2023" target="_blank">here.</a>
+                <a href="https://github.com/PhiTiet/AdventOfCode2023" target="_blank">here</a>
             </button>
+            .
         </p>
 
         <p class="lead" th:text="
