--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -24,6 +24,7 @@
         <button type="button" class="btn btn-sm btn-outline-success">
             <a href="https://github.com/PhiTiet/portfolio" target="_blank">here</a>
         </button>
+        <span>.</span>
     </div>
 </div>
 <div class="col-6 scheme-color-3 my-3 rounded py-3">
