--- a/src/main/resources/templates/fragments/home-page/aboutme.html
+++ b/src/main/resources/templates/fragments/home-page/aboutme.html
@@ -12,7 +12,7 @@
         'Hey there! I\'m Phi, your neighborhood software engineer clocking in at ' + ${details.age()} + ' years
         old. I stumbled into the coding world ' + ${details.programmerPeriod().getYears()} + ' years ago. I\'ve been
         in love with the craft ever since, taking pride in my work as I hone my craftsmanship. Truly, the thought that
-         there is always more to learn and improve keeps me striving.'"></p>
+         there is always more to learn and improve keeps me striving to improve and practice.'"></p>
 
         <p class="lead">
             For a glimpse in my latest ability in software engineering check out the repository used to build and host
