adds improvement and changes footer color

--- a/src/main/resources/templates/fragments/home-page/aboutwebsite.html
+++ b/src/main/resources/templates/fragments/home-page/aboutwebsite.html
@@ -44,6 +44,7 @@
             <li class="list-group-item scheme-color-3"><s>Improve cloud cost efficiency</s></li>
             <li class="list-group-item scheme-color-3">SonarQube & NexusIQ in pipeline</li>
             <li class="list-group-item scheme-color-3">Add relevant links to Hobbies</li>
+            <li class="list-group-item scheme-color-3">Contact form</li>
         </ul>
     </div>
 </div>
