--- a/src/main/resources/templates/fragments/general/footer.html
+++ b/src/main/resources/templates/fragments/general/footer.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<footer class="text-center" th:fragment="footer">
+<footer class="text-center scheme-color-5" th:fragment="footer">
     <div class="row">
         <div class="col-5"></div>
         <div class="col-2">
