--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -5,8 +5,7 @@
 </head>
 
 <body>
-<div th:fragment="hobbies">
-    <div class="container m-2 p-4 border border-dark rounded scheme-color-1">
+    <div class="container border border-dark rounded scheme-color-1" th:fragment="hobbies">
         <div class="jumbotron text-center">
             <h3 class="display-4 my-header">Hobbies</h3>
         </div>
@@ -21,7 +20,6 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
